Fix hit testing on hidpi

Previously in this CL where we fixed a hit testing bug for composited
transparent overlay:
https://chromium-review.googlesource.com/c/chromium/src/+/529426,
we changed the LayerTreeImpl::HitTestVisibleScrollableOrTouchableFunctor
to use layer->should_hit_test() instead of
layer->contributes_to_drawn_render_surface(). However, we discovered
that there is incorrect hit testing bug due to this. The reason is that
a layer should participate in hit testing in ComputeInitialRenderSurfaceList,
but it is not when using should_hit_test().

This CL address the problem. Basically we need another bit that is
similar to should_hit_test_ but is set on cc side only.

Bug: 767908
Change-Id: Icb740f5fd257947e6fd2262a65c5d484c2545fe6