cc/trees/layer_tree_impl.cc
@@ -1924,6 +1924,7 @@ LayerTreeImpl::FindFirstScrollingLayerOrDrawnScrollbarThatIsHitByPoint(
 struct HitTestVisibleScrollableOrTouchableFunctor {
   bool operator()(LayerImpl* layer) const {
     return layer->scrollable() || layer->should_hit_test() ||
+           layer->ContributesToHitTest() ||
            !layer->touch_action_region().region().IsEmpty();
   }
 };
